# playlist-control

./: .env.blank  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: deploy.yml
api/: Dockerfile.dev  pyproject.toml
api/src/api/: access.py  auth.py  database.py  main.py  playing.py  populate.py  sock.py  spotify.py  structs.py  utils.py
client/: Dockerfile.dev  Dockerfile.prod  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
client/src/app/: api.ts  context.tsx  layout.tsx  loader.tsx  page.tsx  socket.ts  structs.ts
client/src/app/components/: bar.tsx
client/src/app/session/: page.tsx
client/src/app/session/[slug]/: page.tsx
client/src/app/session/[slug]/settings/: page.tsx
client/src/app/settings/: page.tsx
client/src/app/spotify/: page.tsx
db/: init.sql  run.sh
db/data/: add-session-playback-modes.sql
db/init/: init.sql
server/: Dockerfile.dev  Dockerfile.prod  package.json  tsconfig.json
server/src/: auth.ts  database.ts  index.mjs  index.ts  spotify.ts  structs.ts  utils.ts
